crates/keron-lang/tests/corpus/errors/parse/for_no_iterable.keron
val xs: List<Int> = [1, 2]
for x in { reconcile x }
